--- a/css-portfolio/css/styles.css
+++ b/css-portfolio/css/styles.css
@@ -68,9 +68,19 @@ header {
     margin: 0 auto;
     padding: 60px 0;
 }
+.soft-title {
+    margin-bottom: 17.55px;
+}
 p {
     margin-bottom: 0;
 }
+h3 {
+    margin-bottom: 0;
+}
+h3 + p {
+    margin-top: 0;
+}
+
 /* Profile
 -------------------------------*/
 header {
@@ -127,7 +137,9 @@ header {
     padding-bottom: 17.55px;
     border-bottom: 1px solid #343434;
 }
-
+.project-info h3 {
+    margin-bottom: 16px;
+}
 /* Contact Info
 -------------------------------*/
 footer {
