--- a/css-portfolio/css/styles.css
+++ b/css-portfolio/css/styles.css
@@ -16,10 +16,6 @@ body {
     font-size: 15px;
     line-height: 1.5;
 }
-img {
-    width: 300px;
-    float: right;
-}
 a {  
     color: #343434;
 }
@@ -129,13 +125,12 @@ header {
     align-self: baseline;
 }
 .flex-soft {
-    display: flex;
-    flex-wrap: wrap;
-    width: 75%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .flex-soft-item {
-    display: flex;
-    flex: 0 0 150px;
+    align-self: center;
 }
 #softBtn {
     white-space: pre-wrap;
@@ -166,6 +161,53 @@ header {
 }
 .project-info h3 {
     margin-bottom: 16px;
+}
+#water-plant {
+    width: 420px;
+    padding: 20px 20px;
+    float: right;
+}
+#fsa {
+    width: 400px;
+    padding-top: 20px;
+    padding-right: 20px;
+    float: left;
+}
+#phoneapp {
+    width: 375px;
+    padding: 0px 0px 20px 20px;
+    float: right;
+}
+@media (max-width: 730px) {
+    #water-plant {
+        padding: 20px;
+        float: none;
+    }
+    #fsa {
+        padding: 20px;
+        float: none;
+    }
+    #phoneapp {
+        padding: 20px;
+        float: none;
+    }
+}
+@media (max-width: 500px) {
+    #water-plant {
+        width: 330px;
+        padding-right: 50px;
+        float: none;
+    }
+    #fsa {
+        width: 330px;
+        padding-right: 50px;
+        float: none;
+    }
+    #phoneapp {
+        width: 330px;
+        padding-right: 50px;
+        float: none;
+    }
 }
 /* Contact Info
 -------------------------------*/
