--- a/colors-game/css/styles.css
+++ b/colors-game/css/styles.css
@@ -7,6 +7,7 @@ header {
     font-size: 30px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    border: 2px solid;
 }
 .question {
     display: inline-block;
