--- a/colors-game/css/styles.css
+++ b/colors-game/css/styles.css
@@ -8,14 +8,15 @@ header {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     border: 2px solid;
+    border-radius: 34px;
+    padding-bottom: 0;
 }
 .question {
     display: inline-block;
     vertical-align: middle;
     line-height: normal;
-    padding-right: 2em;
 }
-div {
+.switch_div {
     display: flex;
 }
 .eng_label {
@@ -40,6 +41,7 @@ div {
     flex-wrap: wrap;
     height: 300px;
     font-size: 30px;
+    margin-bottom: 10px;
 }
 .answer1 {
     border: 2px solid rgb(0, 0, 0);
@@ -49,6 +51,10 @@ div {
     display: flex;
     flex: 1 1 100px;
     font-weight: bold;
+    border-radius: 34px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .answer2 {
     border: 2px solid rgb(0, 0, 0);
@@ -58,6 +64,10 @@ div {
     display: flex;
     flex: 1 1 100px;
     font-weight: bold;
+    border-radius: 34px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .answer3 {
     border: 2px solid rgb(0, 0, 0);
@@ -67,6 +77,9 @@ div {
     display: flex;
     flex: 1 1 100px;
     font-weight: bold;
+    border-radius: 34px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 /* The switch - the box around the slider */
@@ -134,4 +147,49 @@ div {
   
   .slider.round:before {
     border-radius: 50%;
+  }
+
+  img {
+      float: left;
+      width: 10%;
+      height: auto;
+      margin-right: 1em;
+  }
+
+  /* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
   }
