--- a/colors-game/css/styles.css
+++ b/colors-game/css/styles.css
@@ -151,7 +151,7 @@ header {
 
   img {
       float: left;
-      width: 10%;
+      width: 4em ;
       height: auto;
       margin-right: 1em;
   }
