--- a/colors-game/css/styles.css
+++ b/colors-game/css/styles.css
@@ -183,7 +183,7 @@ header {
   .close {
     color: #aaa;
     float: right;
-    font-size: 28px;
+    font-size: 3em;
     font-weight: bold;
   }
   
