--- a/colors-game/css/styles.css
+++ b/colors-game/css/styles.css
@@ -42,6 +42,7 @@ header {
     height: 300px;
     font-size: 30px;
     margin-bottom: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .answer1 {
     border: 2px solid rgb(0, 0, 0);
