--- a/math-game/css/styles.css
+++ b/math-game/css/styles.css
@@ -22,15 +22,19 @@ header {
 }
 footer {
     display: flex;
-    height: 80px;
-    justify-content: center; /* align horizontal */
-    align-items: center; /* align vertical */
-    font-size: 15px;
+    max-width: 800px;
+    border: 2px solid;
+    margin: 15px 10px 10px 10px;
+    padding: 5px;
+    background-color: limegreen;
+    opacity: .7;
+    justify-content: center;
+    align-items: center;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 0;
 }
 button {
+    border: 2px solid;
     margin-left: 50px;
     padding: 10px 10px;
     font-size: 15px;
@@ -62,14 +66,69 @@ button {
     font-family: Arial, Helvetica, sans-serif;
     margin: 10px;
 }
-label {
+.options-section {
+    display: flex;
+    max-width: 800px;
+    border: 2px solid;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 5px;
+    background-color: white;
+    opacity: .5;
+    justify-content: center;
+}
+.addOnly-container {
+    display: flex;
+    padding-right: 10px;
+    font-size: 22px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.maxOpVal-container {
+    display: flex;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 22px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
+label {
+    padding-left: 10px;
+    padding-right: 10px;
+}
 input[type=checkbox] {
     width: 20px;
     height: 20px;
+}
+input[type=number] {
+    height: 20px;
+    width: 23px;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: end;
+}
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+@media (max-width: 725px) {
+    header {
+        height: 50px;
+        font-size: 20px;
+    }
+    .answers-container {
+        height: 250px;
+    }
+    .answers {
+        font-size: 30px;
+        font-weight: bold;
+    }
+    .banner {
+        font-size: 20px;
+    }
+    label {
+        font-size: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
